--- a/config.yaml
+++ b/config.yaml
@@ -78,3 +78,10 @@ watcher:
 
 # Base URL for XML sitemap generation
 base_url: http://docs.cloudmailin.com
+
+# Deploy using fog
+deploy:
+  default:
+    kind:                  fog
+    provider:              aws
+    bucket:                docs.cloudmailin.com
