--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: '2'
 services:
   docs:
     build: .
-    command: bash -c "guard --no-interactions & nanoc view -p 5000"
+    command: bash -c "NANOC_ENV=development bundle exec guard --force-polling --no-interactions & bundle exec nanoc view --live-reload -o 0.0.0.0 -p 5000"
     volumes:
       - .:/app
     ports:
       - "5000:5000"
+      - "35729:35729"
