Add outbound examples
This adds a number of additional changes and helpers to work with the
content.
It also modifies some inbound examples to make separation clearer.

--- a/Rules
+++ b/Rules
@@ -2,6 +2,8 @@ compile '/guide/' do
   filter :haml
 end
 
+ignore '*/_*'
+
 compile '*' do
   if item.binary?
     "#{item.identifier.chop}.#{item[:extension]}"
