--- a/config.yaml
+++ b/config.yaml
@@ -84,6 +84,7 @@ checks:
       - https://docs.cloudmailin.com/receiving_email/examples/receiving-email-with-python-django-and-flask/
       - https://www.godaddy.com/
       - https://www.npmjs.com/package/cloudmailin # cloudflare protection raises 403
+      - https://docs.cloudmailin.com/features/dmarc-verification/ # self-referential redirect
 
 # Deploy using fog
 deploy:
